Add Dockerfile for GraalVM native image build and runtime configuration , test Gh Actions